--- a/references.bib
+++ b/references.bib
@@ -1727,6 +1727,18 @@
   year = {2012}
 }
 
+@article{Kipping2021,
+  title = {Black {{Swans}} in {{Astronomical Data}}},
+  author = {Kipping, David},
+  year = {2021},
+  month = apr,
+  volume = {2104},
+  pages = {arXiv:2104.07693},
+  abstract = {Astronomy has always been propelled by the discovery of new phenomena lacking precedent, often followed by new theories to explain their existence and properties. In the modern era of large surveys tiling the sky at ever high precision and sampling rates, these serendipitous discoveries look set to continue, with recent examples including Boyajian's Star, Fast Radio Bursts and `Oumuamua. Accordingly, we here look ahead and aim to provide a statistical framework for interpreting such events and providing guidance to future observations, under the basic premise that the phenomenon in question stochastically repeat at some unknown, constant rate, \$\textbackslash lambda\$. Specifically, expressions are derived for 1) the a-posteriori distribution for \$\textbackslash lambda\$, 2) the a-posteriori distribution for the recurrence time, and, 3) the benefit-to-cost ratio of further observations relative to that of the inaugural event. Some rule-of-thumb results for each of these are found to be 1) \$\textbackslash lambda {$<$} \textbackslash\{0.7, 2.3, 4.6\textbackslash\}\textbackslash,t\_1\^\{-1\}\$ to \$\textbackslash\{50, 90, 95\textbackslash\}\textbackslash\%\$ confidence (where \$t\_1=\$ time to obtain the first detection), 2) the recurrence time is \$t\_2 {$<$} \textbackslash\{1, 9, 99\textbackslash\}\textbackslash,t\_1\$ to \$\textbackslash\{50, 90, 95\textbackslash\}\textbackslash\%\$ confidence, with a lack of repetition by time \$t\_2\$ yielding a \$p\$-value of \$1/[1+(t\_2/t\_1)]\$, and, 3) follow-up for \$\textbackslash lesssim 10\textbackslash,t\_1\$ is expected to be scientifically worthwhile under an array of differing assumptions about the object's intrinsic scientific value. We apply these methods to the Breakthrough Listen Candidate 1 signal and tidal disruption events observed by TESS.},
+  journal = {arXiv e-prints},
+  keywords = {Astrophysics - Instrumentation and Methods for Astrophysics}
+}
+
 @article{Kjeldsen.Bedding.ea2005,
   title = {Solar-like {{Oscillations}} in {$\alpha$} {{Centauri B}}},
   author = {Kjeldsen, Hans and Bedding, Timothy R. and Butler, R. Paul and {Christensen-Dalsgaard}, J{\o}rgen and Kiss, Laszlo L. and McCarthy, Chris and Marcy, Geoffrey W. and Tinney, Christopher G. and Wright, Jason T.},
